--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/robert3.png" alt="Robert Richards Profile Picture"></td>
+      <td><img src="Images/robert3.png" alt="Robert Richards Profile Picture"></td>
       <td>
         <h1>Robert N. Richards</h1>
         <p><em>Programming Student and Writer</em></p>
