Changes to files

--- a/contact.html
+++ b/contact.html
@@ -4,10 +4,11 @@
 <head>
   <meta charset="utf-8">
   <title>Contact Me</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-  <h2>Contact Me At;</h2><br>
+  <h1>Contact Me At;</h1><br>
   <p><strong>Email:</strong>robneilrichards@gmail.com</p>
   <p><strong>Phone:</strong>236-887-3056</p>
   <p><strong>Mailing Address:</strong>34862 Sandon Place, Abbotsford, BC Canada</p>
