--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 <head>
   <meta charset="utf-8">
   <title>Robert Richards' Website</title>
+  <link rel="stylesheet" href="css/styles.css">
+
 </head>
 
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="Images/robert3.png" alt="Robert Richards Profile Picture"></td>
+      <td><img class="robert3" src="Images/robert3.png" alt="Robert Richards Profile Picture"></td>
       <td>
         <h1>Robert N. Richards</h1>
         <p><em>Programming Student and Writer</em></p>
